A few more changes to ensure FAQ is aligned properly.

--- a/carousel.css
+++ b/carousel.css
@@ -256,9 +256,10 @@ My Personal Editing:
 
 #CONTACT .container {
     margin: auto;
-    padding: 80px 0;
     color: #343a40;
     height: 500px;
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 
 #CONTACT .section-title {
